first project - successful

--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -3,4 +3,117 @@
 {% block content %}
 <class="container">
   <h1>test</h1>
+
+<table class="table table-striped">
+  <thead>
+  <tr>
+    <th scope="col">#</th>
+    <th scope="col">Name</th>
+    <th scope="col">Country</th>
+    <th scope="col">URL</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <th scope="row">1</th>
+    <td>Great Wall of China</td>
+    <td>China</td>
+    <td><a href="https://en.wikipedia.org/wiki/Great_Wall_of_China">Click Here</a></td>
+  </tr>
+  <tr>
+    <th scope="row">2</th>
+    <td>Machu Picchu</td>
+    <td>Peru</td>
+    <td><a href="https://en.wikipedia.org/wiki/Machu_Picchu">Click Here</a></td>
+  </tr>
+  <tr>
+    <th scope="row">3</th>
+    <td>Taj Mahal</td>
+    <td>India</td>
+    <td><a href="https://www.tajmahal.gov.in/">Click Here</a></td>
+  </tr>
+  <tr>
+    <th scope="row">4</th>
+    <td>Christ the Redeemer Statue</td>
+    <td>Brazil</td>
+    <td><a href="https://www.britannica.com/topic/Christ-the-Redeemer">Click Here</a></td>
+  </tr>
+  <tr>
+    <th scope="row">5</th>
+    <td>Great Pyramid of Giza</td>
+    <td>Egypt</td>
+    <td><a href="https://en.wikipedia.org/wiki/Great_Pyramid_of_Giza">Click Here</a></td>
+  </tr>
+  </tbody>
+</table>
+
+<body>
+
+<div class="col-md-10">
+  <h4>Number 1</h4>
+  <h4 class="subheading">Great Wall of China</h4>
+  <p class="text-muted">Built between the 5th century B.C. and the 16th century, the Great Wall of China is a stone-and-earth fortification created to protect the borders of the Chinese Empire from invading Mongols.
+    The Great Wall is actually a succession of multiple walls spanning approximately 4,000 miles, making it the world's longest man-made structure.
+  </p>
+  <div class="row">
+    <div class="col-md-6 how-img">
+      <img src="https://www.360-expeditions.com/wp-content/uploads/2017/08/trekking-expedition-great-wall-of-china-one-of-the-seven-wonders-of-world-on-360-expeditions-474x474.jpg" class="rounded-circle img-fluid" alt=""/>
+    </div>
+  </div>
+</div>
+
+<div class="col-md-10">
+  <h4>Number 2</h4>
+  <h4 class="subheading">Machu Picchu</h4>
+  <p class="text-muted">Machu Picchu, an Incan city of sparkling granite precariously perched between 2 towering Andean peaks, is thought by scholars to have been a sacred archaeological center for the nearby
+    Incan capital of Cusco. Built at the peak of the Incan Empire in the mid-1400s, this mountain citadel was later abandoned by the Incas. The site remained unknown except to locals until 1911,
+    when it was rediscovered by archaeologist Hiram Bingham. The site can only be reached by foot, train or helicopter; most visitors visit by train from nearby Cusco.
+  </p>
+  <div class="row">
+    <div class="col-md-6 how-img">
+      <img src="https://www.annees-de-pelerinage.com/wp-content/uploads/2016/01/Iconic-view-of-machu-picchu-peru.jpg" class="rounded-circle img-fluid" alt=""/>
+    </div>
+  </div>
+</div>
+
+
+<div class="col-md-10">
+  <h4>Number 3</h4>
+  <h4 class="subheading">Taj Mahal</h4>
+  <p class="text-muted">The Taj Mahal is widely considered one of the most beautiful buildings ever created.
+    The exquisite marble structure in Agra, India, is a mausoleum, an enduring monument to the love of a husband for his favorite wife.
+    It's also an eternal testament to the artistic and scientific accomplishments of a wealthy empire.</p>
+  <div class="row">
+    <div class="col-md-6 how-img">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Taj_Mahal_in_March_2004.jpg/728px-Taj_Mahal_in_March_2004.jpg" class="rounded-circle img-fluid" alt=""/>
+    </div>
+  </div>
+
+</div>
+
+<div class="col-md-10">
+  <h4>Number 4</h4>
+  <h4 class="subheading">Christ the Redeemer Statue</h4>
+  <p class="text-muted">The Art Deco-style Christ the Redeemer statue has been looming over the Brazilians from upon Corcovado mountain in an awe-inspiring state of eternal blessing since 1931.
+    The 130-foot reinforced concrete-and-soapstone statue was designed by Heitor da Silva Costa and cost approximately $250,000 to build - much of the money was raised through donations.
+    The statue has become an easily recognized icon for Rio and Brazil</p>
+  <div class="row">
+    <div class="col-md-6 how-img">
+      <img src="https://cdn.britannica.com/54/150754-050-5B93A950.jpg" class="rounded-circle img-fluid" alt=""/>
+    </div>
+  </div>
+</div>
+
+<div class="col-md-10">
+  <h4>Number 5</h4>
+  <h4 class="subheading">Great Pyramid of Giza</h4>
+  <p class="text-muted">The Great Pyramid of Giza is a defining symbol of Egypt and the last of the ancient Seven Wonders of the World.
+    It is located on the Giza plateau near the modern city of Cairo and was built over a twenty-year period during the reign of the king Khufu (2589-2566 BCE, also known as Cheops) of the 4th Dynasty.</p>
+  <div class="row">
+    <div class="col-md-6 how-img">
+      <img src="https://www.ancient-origins.net/sites/default/files/field/image/giza-pyramid_0.jpg" class="rounded-circle img-fluid" alt=""/>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
