Made "Number 1 - 5" headings bold and made title of the project bold

--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 <class="container">
-  <h1><bold>Wonders of the World</bold></h1>
+  <h1><bold>"Wonders of the World"</bold></h1>
 
 <table class="table table-striped">
   <thead>
