--- a/web/views/index.twig
+++ b/web/views/index.twig
@@ -50,7 +50,7 @@
 <body>
 
 <div class="col-md-10">
-  <h4><bold<"Number 1"<bold></h4>
+  <h4>Number 1</h4>
   <h4 class="subheading">Great Wall of China</h4>
   <p class="text-muted">Built between the 5th century B.C. and the 16th century, the Great Wall of China is a stone-and-earth fortification created to protect the borders of the Chinese Empire from invading Mongols.
     The Great Wall is actually a succession of multiple walls spanning approximately 4,000 miles, making it the world's longest man-made structure.
@@ -63,7 +63,7 @@
 </div>
 
 <div class="col-md-10">
-  <h4><bold>"Number 2"</bold></h4>
+  <h4>Number 2</h4>
   <h4 class="subheading">Machu Picchu</h4>
   <p class="text-muted">Machu Picchu, an Incan city of sparkling granite precariously perched between 2 towering Andean peaks, is thought by scholars to have been a sacred archaeological center for the nearby
     Incan capital of Cusco. Built at the peak of the Incan Empire in the mid-1400s, this mountain citadel was later abandoned by the Incas. The site remained unknown except to locals until 1911,
@@ -78,7 +78,7 @@
 
 
 <div class="col-md-10">
-  <h4><bold>"Number 3"</bold></h4>
+  <h4>Number 3</h4>
   <h4 class="subheading">Taj Mahal</h4>
   <p class="text-muted">The Taj Mahal is widely considered one of the most beautiful buildings ever created.
     The exquisite marble structure in Agra, India, is a mausoleum, an enduring monument to the love of a husband for his favorite wife.
@@ -92,7 +92,7 @@
 </div>
 
 <div class="col-md-10">
-  <h4><bold>"Number 4"</bold></h4>
+  <h4>Number 4</h4>
   <h4 class="subheading">Christ the Redeemer Statue</h4>
   <p class="text-muted">The Art Deco-style Christ the Redeemer statue has been looming over the Brazilians from upon Corcovado mountain in an awe-inspiring state of eternal blessing since 1931.
     The 130-foot reinforced concrete-and-soapstone statue was designed by Heitor da Silva Costa and cost approximately $250,000 to build - much of the money was raised through donations.
@@ -105,7 +105,7 @@
 </div>
 
 <div class="col-md-10">
-  <h4><bold>"Number 5"</bold></h4>
+  <h4>Number 5</h4>
   <h4 class="subheading">Great Pyramid of Giza</h4>
   <p class="text-muted">The Great Pyramid of Giza is a defining symbol of Egypt and the last of the ancient Seven Wonders of the World.
     It is located on the Giza plateau near the modern city of Cairo and was built over a twenty-year period during the reign of the king Khufu (2589-2566 BCE, also known as Cheops) of the 4th Dynasty.</p>
